--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "0.10.1",
     "html-webpack-plugin": "2.30.1",
-    "image-webpack-loader": "^4.2.0",
+    "image-webpack-loader": "3.2.0",
     "json-loader": "0.5.4",
     "less": "2.7.2",
     "less-loader": "2.2.3",
